k3s-cluster/nginx-demo-hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo-hello
  namespace: nginx
spec:
  replicas: 1500
  selector:
    matchLabels:
      app: nginx-demo-hello
  template:
    metadata:
      labels:
        app: nginx-demo-hello
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello:latest
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
