k3s-cluster/nginx-demo-hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-hello
  namespace: nginx
  labels:
    app: nginx-demo-hello
spec:
  type: LoadBalancer
  sessionAffinity: None
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx-demo-hello
