k3s-cluster/nginx-demo-hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-hello
  namespace: nginx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - nginx.global.corvaglia.dev
    secretName: wildcard-global-corvaglia-dev-tls
  rules:
  - host: nginx.global.corvaglia.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-demo-hello
            port:
              name: http
